--- a/views/server/user/list.jade
+++ b/views/server/user/list.jade
@@ -31,3 +31,6 @@ block content
                                         a.btn.btn-default.btn-xs(href='#{adminDir}/user/#{user.id}/edit') 编辑
                                         |  
                                         a.btn.btn-danger.btn-xs(href='#{adminDir}/user/#{user.id}/del') 删除
+                    if (pageInfo && pageInfo.totalPage > 1)
+                        include ../page
+                        +pagination(pageInfo)
