--- a/views/server/category/list.jade
+++ b/views/server/category/list.jade
@@ -22,6 +22,6 @@ block content
                                     a.btn.btn-default.btn-xs(href='#{adminDir}/category/#{category.id}/edit') 编辑
                                     | &nbsp;
                                     a.btn.btn-danger.btn-xs(href='#{adminDir}/category/#{category.id}/del') 删除
-                if (pageInfo)
+                if (pageInfo && pageInfo.totalPage > 1)
                     include ../page
                     +pagination(pageInfo)
