--- a/views/server/role/list.jade
+++ b/views/server/role/list.jade
@@ -22,3 +22,6 @@ block content
                                     a.btn.btn-default.btn-xs(href='#{adminDir}/role/#{role.id}/edit') 编辑
                                     | &nbsp;
                                     a.btn.btn-danger.btn-xs(href='#{adminDir}/role/#{role.id}/del') 删除
+                if (pageInfo && pageInfo.totalPage > 1)
+                    include ../page
+                    +pagination(pageInfo)
