--- a/views/server/category/item.jade
+++ b/views/server/category/item.jade
@@ -6,5 +6,6 @@ block content
             .col-md-12
                 .lists
                     p 名称：#{category.name}
+                    p 标记(别名)：#{category.flag}
                     p 日期：#{category.created}
                     p 描述：!{category.description}
