--- a/views/server/category/add.jade
+++ b/views/server/category/add.jade
@@ -9,6 +9,9 @@ block content
                         label 名称
                         input.form-control(name='name')
                     .form-group
+                        label 标记(别名)
+                        input.form-control(name='flag')
+                    .form-group
                         label 描述
                         textarea.form-control(name='description', rows='8')
                     button.btn.btn-primary(type='submit') 提交
