--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title #{title}
+        title #{__title}
         link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
         link(rel='stylesheet', href='/css/style.css')
         block head-css
