--- a/views/server/user/list.jade
+++ b/views/server/user/list.jade
@@ -5,7 +5,7 @@ block content
         .row
             .col-md-12
                 .lists
-                    //a.btn.btn-default(href='#{adminDir}/user/register') 添加用户
+                    a.btn.btn-default(href='#{adminDir}/user/add') 添加用户
                     table.table.table-striped
                         thead
                             tr
