--- a/views/server/index.jade
+++ b/views/server/index.jade
@@ -12,7 +12,7 @@ block content
                             li.list-group-item 权限：
                                 span.label.label-info #{role.actions}
                             li.list-group-item 是否有'admin'权限：
-                                span #{role.actions.indexOf('admin') > -1}
+                                span #{role.actions && role.actions.indexOf('admin') > -1}
 block foot-js
     script.
         
