--- a/views/server/user/list.jade
+++ b/views/server/user/list.jade
@@ -30,7 +30,7 @@ block content
                                     td 
                                         a.btn.btn-default.btn-xs(href='#{adminDir}/user/#{user.id}/edit') 编辑
                                         |  
-                                        if (util.getRoles(user).indexOf(__config.admin.role.admin) === -1)
+                                        if (user.status !== -1)
                                             a.btn.btn-danger.btn-xs(href='#{adminDir}/user/#{user.id}/del') 删除
                     if (pageInfo && pageInfo.totalPage > 1)
                         include ../page
