--- a/views/app/upload.jade
+++ b/views/app/upload.jade
@@ -2,11 +2,26 @@ extends layout
 
 block content
     .container
-        form(action='/upload', method='post')
-            input(type='file', name='files', multiple)
-            button(type='submit') 提交
+        //form(action='/upload', method='post')
+        <input id="fileupload" type="file" name="files[]" data-url="/upload" multiple>
+        //input(type='file', name='files[]', multiple)
+        //button(type='submit') 提交
 
 block foot-js
+    script(src='js/vendor/jquery.min.js')
+    script(src='js/vendor/jquery.ui.widget.js')
+    script(src='js/jquery.iframe-transport.js')
+    script(src='js/jquery.fileupload.js')
     script.
-        
+        $(function () {
+            $('#fileupload').fileupload({
+                dataType: 'json',
+                done: function (e, data) {
+                    $.each(data.result.files, function (index, file) {
+                        console.log(file)
+                        $('<p/>').text(file.name).appendTo(document.body);
+                    });
+                }
+            });
+        });
                 
