--- a/views/app/index.jade
+++ b/views/app/index.jade
@@ -12,6 +12,10 @@ block content
                 | #{moment(content.created).format('LLL')}
             .content
                 | #{content.content}
+        .text-center
+            if (pageInfo && pageInfo.totalPage > 1)
+                include ./page
+                +pagination(pageInfo)
 block foot-js
     script.
         
