file path chagne

--- a/views/app/upload.jade
+++ b/views/app/upload.jade
@@ -8,10 +8,10 @@ block content
         //button(type='submit') 提交
 
 block foot-js
-    script(src='js/vendor/jquery.min.js')
-    script(src='js/vendor/jquery.ui.widget.js')
-    script(src='js/jquery.iframe-transport.js')
-    script(src='js/jquery.fileupload.js')
+    script(src='js/jqueryupload/vendor/jquery.min.js')
+    script(src='js/jqueryupload/vendor/jquery.ui.widget.js')
+    script(src='js/jqueryupload/jquery.iframe-transport.js')
+    script(src='js/jqueryupload/jquery.fileupload.js')
     script.
         $(function () {
             $('#fileupload').fileupload({
