--- a/views/app/upload.jade
+++ b/views/app/upload.jade
@@ -2,10 +2,13 @@ extends layout
 
 block content
     .container
-        //form(action='/upload', method='post')
-        <input id="fileupload" type="file" name="files[]" data-url="/upload" multiple>
-        //input(type='file', name='files[]', multiple)
-        //button(type='submit') 提交
+        
+        input#fileupload(type="file", name="files[]", data-url="/upload", multiple)
+        p
+        form(action='/upload', method='post', enctype='multipart/form-data')
+            input(type='hidden', name='_csrf', value='#{token}')
+            input(type="file", name="files[]", multiple)
+            button 提交
 
 block foot-js
     script(src='js/jqueryupload/vendor/jquery.min.js')
@@ -18,12 +21,6 @@ block foot-js
                 //- formData: {
                 //-     _csrf: '#{token}'
                 //- },
-                add: function(e, data){
-                    data.formData = {
-                        _csrf: '#{token}'
-                    };
-                    data.submit();
-                },
                 dataType: 'json',
                 done: function (e, data) {
                     $.each(data.result.files, function (index, file) {
