--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -27,4 +27,6 @@ html
                         else
                             a(href='#{adminDir}') 后台管理
         block content
+        script(src='/js/vendor/jquery-2.1.1.min.js')
+        script(src='/bootstrap/js/bootstrap.min.js')
         block foot-js
