--- a/views/app/comment.jade
+++ b/views/app/comment.jade
@@ -11,7 +11,8 @@ block content
                 | 发布于 
                 | #{moment(comment.created).format('LLL')}
                 p 来自
-                    a(href='/content/#{comment.from._id}') #{comment.from.title}
+                    if (comment.from)
+                        a(href='/content/#{comment.from._id}') #{comment.from.title}
             
         .text-center
             if (pageInfo && pageInfo.totalPage > 1)
