--- a/views/server/comment/item.jade
+++ b/views/server/comment/item.jade
@@ -6,6 +6,9 @@ block content
             .col-md-12
                 .lists
                     p 内容：#{comment.content}
+                    p 来自：
+                        if (comment.from)
+                            a(href='#{adminDir}/content/#{comment.from.id}') #{comment.from.title}
                     p 日期：#{comment.created}
                     p 作者：
                         if (comment.author)
