app content list pageinfi

--- a/views/app/content/list.jade
+++ b/views/app/content/list.jade
@@ -20,3 +20,7 @@ block content
                                         strong #{content.author.name}
                                 td
                                     | #{moment(content.created).format('LLL')}
+                .text-center
+                    if (pageInfo && pageInfo.totalPage > 1)
+                        include ../page
+                        +pagination(pageInfo)
