--- a/views/server/user/item.jade
+++ b/views/server/user/item.jade
@@ -14,6 +14,7 @@ block content
                                 th 名称
                                 th 用户名
                                 th 角色
+                                th 创建人
                                 th Salt
                                 th Hashed_password
                         tbody
@@ -27,6 +28,11 @@ block content
                                             span.label.label-info
                                                 | #{role.name}
                                             | 
+                                td
+                                    if (user.author)
+                                        | #{user.author.username}
+                                    else
+                                        | 无
                                 td #{user.salt}
                                 td #{user.hashed_password}
 
