--- a/views/server/user/list.jade
+++ b/views/server/user/list.jade
@@ -12,6 +12,7 @@ block content
                                 th 用户名 
                                 th 姓名
                                 th 角色
+                                th 创建人
                                 th 创建日期
                                 th 操作
                         tbody
@@ -26,6 +27,11 @@ block content
                                                 span.label.label-info
                                                     | #{role.name}
                                                 | 
+                                    td
+                                        if (user.author)
+                                            | #{user.author.username}
+                                        else
+                                            | 无
                                     td #{moment(user.created).format('LLL')}
                                     td 
                                         a.btn.btn-default.btn-xs(href='#{adminDir}/user/#{user.id}/edit') 编辑
