--- a/views/app/index.jade
+++ b/views/app/index.jade
@@ -22,7 +22,7 @@ block content
                                 each comment in content.comments
                                     li #{comment.content}
 
-                .row
+                .row.form-group
                     .col-md-4
                         textarea.form-control.J_textarea(name='content')
                 .row
