front content +comment

--- a/views/app/content/item.jade
+++ b/views/app/content/item.jade
@@ -15,3 +15,9 @@ block content
                         | 发布于：#{moment(content.created).format('LL')} 
                         | 访问量：#{content.visits}
                     .content !{content.content}
+                    .comments
+                        h2 评论
+                        if(content.comments)
+                            ul
+                                each comment in content.comments
+                                    li #{comment.content}
