--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -50,5 +50,6 @@ html
         //-                         span.label.label-info #{role.actions}
         //-                     li.list-group-item 是否有'publish'权限：
         //-                         span #{role.actions.indexOf('publish') > -1}
+        script(src='/js/vendor/jquery-2.1.1.min.js')
         block foot-js
         script.
