--- a/views/server/content/add.jade
+++ b/views/server/content/add.jade
@@ -1,5 +1,6 @@
 extends ../layout
-
+block head-css
+    <link rel="stylesheet" href="/js/upload/css/jquery.fileupload.css">
 block content
     .container
         .row
@@ -17,8 +18,48 @@ block content
                                     option(value='#{category.id}')
                                         | #{category.name}
                     .form-group
+                        label 图集
+                        //input#fileupload(type="file", name="files[]", data-url="/upload", multiple)
+                        span.btn.btn-success.fileinput-button
+                            i.glyphicon.glyphicon-plus
+                            span 添加文件
+                            input#fileupload(data-url='/upload', type='file', name='files[]', multiple='multiple')
+                        #J_files
+                        #J_preview.preview
+                    .form-group
                         label 内容
                         textarea.form-control(name='content', rows='8')
                     input(type='hidden', name='_csrf', value='#{token}')
                     button.btn.btn-primary(type='submit') 提交
+
+block foot-js
+    script(src='/js/upload/js/vendor/jquery.ui.widget.js')
+    <script src="http://blueimp.github.io/JavaScript-Load-Image/js/load-image.min.js"></script>
+    <script src="http://blueimp.github.io/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
+    script(src='/js/upload/js/jquery.iframe-transport.js')
+    script(src='/js/upload/js/jquery.fileupload.js')
+    <script src="/js/upload/js/jquery.fileupload-process.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-image.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-audio.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-video.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-validate.js"></script>
+
+    script.
+        $(function () {
+            $('#fileupload').fileupload({
+                url: '/upload',
+                formData: {
+                    _csrf: '#{token}'
+                },
+                dataType: 'json',
+                done: function (e, data) {
+                    $.each(data.result.files, function (index, file) {
+                        console.log(file)
+                        //$('<img src="' + file.url + '"/>').appendTo(document.body);
+                        $('#J_files').append('<input type="hidden" name="gallery" value="' + file._id + '"/>');
+                        $('#J_preview').append('<img src="' + file.url + '"/>');
+                    });
+                }
+            });
+        });
 
