--- a/views/server/user/login.jade
+++ b/views/server/user/login.jade
@@ -8,7 +8,7 @@ block content
                     h2 登录
                     .form-group
                         label 用户名
-                        input.form-control(name='username')
+                        input.form-control(name='username', autofocus)
                     .form-group
                         label 密码
                         input.form-control(type='password', name='password')
