todo:file upload id

--- a/views/server/file/edit.jade
+++ b/views/server/file/edit.jade
@@ -14,7 +14,7 @@ block content
                         span.btn.btn-success.fileinput-button
                                 i.glyphicon.glyphicon-plus
                                 span 添加文件
-                                input#fileupload(data-url='/upload', type='file', name='files[]', multiple='multiple')
+                                input#fileupload(type='file', name='files[]', multiple='multiple')
                         div(style='padding: 10px;')
                         #J_files
                         div#progress.progress
