--- a/views/server/file/add.jade
+++ b/views/server/file/add.jade
@@ -1,6 +1,6 @@
 extends ../layout
 block head-css
-    <link rel="stylesheet" href="/js/upload/css/jquery.fileupload.css">
+    link(rel='stylesheet', href='/js/upload/css/jquery.fileupload.css')
 block content
     .container
         .row
@@ -26,8 +26,10 @@ block content
 
 block foot-js
     script(src='/js/upload/js/vendor/jquery.ui.widget.js')
-    <script src="http://blueimp.github.io/JavaScript-Load-Image/js/load-image.min.js"></script>
-    <script src="http://blueimp.github.io/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
+    //<script src="http://blueimp.github.io/JavaScript-Load-Image/js/load-image.min.js"></script>
+    //<script src="http://blueimp.github.io/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
+    script(src='/js/load-image/js/load-image.min.js')
+    //script(src='/js/vendor/canvas-to-blob.min.js')
     script(src='/js/upload/js/jquery.iframe-transport.js')
     script(src='/js/upload/js/jquery.fileupload.js')
     <script src="/js/upload/js/jquery.fileupload-process.js"></script>
