--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -1,5 +1,6 @@
 extends ../layout
-
+block head-css
+    link(rel='stylesheet', href='/js/upload/css/jquery.fileupload.css')
 block content
     .container
         .row
@@ -8,6 +9,23 @@ block content
                     .form-group
                         label 标题
                         input.form-control(name='title', value='#{content.title}')
+                    .form-group
+                        label 图集
+                        .gallery
+                            if (content.gallery)
+                                - each image in content.gallery
+                                    img(src='#{image.url}')
+                                    input(type='hidden', name='gallery', value='#{image._id}')
+                                    a(href='#{adminDir}/file/#{image._id}/del') 删除
+                        span.btn.btn-success.fileinput-button
+                            i.glyphicon.glyphicon-plus
+                            span 添加文件
+                            input#fileupload(data-url='/upload', type='file', name='files[]', multiple='multiple')
+                        #J_files
+                        div#progress.progress
+                            div.progress-bar.progress-bar-success
+                        #J_preview.preview
+                           
                     .form-group
                         label 分类
                         select.form-control(name='category')
@@ -25,3 +43,41 @@ block content
                     input(type='hidden', name='_csrf', value='#{token}')
                     button.btn.btn-primary(type='submit') 提交
 
+block foot-js
+    script(src='/js/upload/js/vendor/jquery.ui.widget.js')
+    script(src='/js/load-image/js/load-image.min.js')
+    //script(src='/js/vendor/canvas-to-blob.min.js')
+    script(src='/js/upload/js/jquery.iframe-transport.js')
+    script(src='/js/upload/js/jquery.fileupload.js')
+    <script src="/js/upload/js/jquery.fileupload-process.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-image.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-audio.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-video.js"></script>
+    <script src="/js/upload/js/jquery.fileupload-validate.js"></script>
+
+    script.
+        $(function () {
+            $('#fileupload').fileupload({
+                url: '/upload',
+                formData: {
+                    _csrf: '#{token}'
+                },
+                dataType: 'json',
+                progressall: function(e, data) {
+                    //console.log(e, data);
+                    var progress = parseInt(data.loaded / data.total * 100, 10);
+                    $('#progress .progress-bar').css(
+                        'width',
+                        progress + '%'
+                    );
+                },
+                done: function (e, data) {
+                    $.each(data.result.files, function (index, file) {
+                        console.log(file)
+                        //$('<img src="' + file.url + '"/>').appendTo(document.body);
+                        $('#J_files').append('<input type="hidden" name="gallery" value="' + file._id + '"/>');
+                        $('#J_preview').append('<img src="' + file.url + '"/>');
+                    });
+                }
+            });
+        });
