--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -6,7 +6,7 @@ html
         link(rel='stylesheet', href='/css/style.css')
         block head-css
         block head-js
-    body
+    body.fixed-top
         .navbar.navbar-inverse.navbar-fixed-top
             .container
                 .navbar-header
