--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -7,29 +7,18 @@ html
         block head-css
         block head-js
     body
-        .navbar.navbar-inverse.navbar-fixed-top
+        .cms-masthead
             .container
-                .navbar-header
-                    a.navbar-brand(href='/') CMS
-                .collapse.navbar-collapse
-                    ul.nav.navbar-nav
-                        li(class=!Path ? 'active' : '')
-                                a(href='/') 首页
-                        li(class=Path === 'content' ? 'active' : '')
-                                a(href='/content') 内容
-                        li(class=Path === 'comment' ? 'active' : '')
-                                a(href='/comment') 评论
-                        //- li(class=Path === 'content' ? 'active' : '')
-                        //-         a(href='/content') 内容
-                        //- li(class=Path === 'category' ? 'active' : '')
-                        //-         a(href='/category') 分类
-                        
-                    .navbar-right
-                        if (user)
-                            | #{user.name} 
+                .cms-nav
+                    .pull-right.admin-link
+                        if (User)
+                            | #{User.name} 
                             a(href='#{adminDir}/user/logout') 注销
                         else
                             a(href='#{adminDir}') 后台管理
+                    a.cms-nav-item(class=!Path ? 'active' : '',href='/') 首页
+                    a.cms-nav-item(class=Path === 'content' ? 'active' : '',href='/content') 内容
+                    a.cms-nav-item(class=Path === 'comment' ? 'active' : '',href='/comment') 评论
         block content
         script(src='/js/vendor/jquery-2.1.1.min.js')
         script(src='/bootstrap/js/bootstrap.min.js')
