--- a/views/server/me.jade
+++ b/views/server/me.jade
@@ -76,6 +76,7 @@ block content
                             label.col-md-2.text-right 确认新密码
                             .col-md-4
                                 input.form-control(type='text', name='repassword')
+                        //input(type='hidden', name='_csrf', value='#{token}')
                         .form-group
                             .col-md-4.col-md-offset-2
                                 button.btn.btn-primary(type='submit') 提交
